--- a/src/app/catalog-page/catalog-home-page/catalog-home-page.component.scss
+++ b/src/app/catalog-page/catalog-home-page/catalog-home-page.component.scss
@@ -68,9 +68,11 @@
       a{
         font-size: 14px;
         line-height: 18px;
-        
       }
     }
+  }
+  .catalog-categories{
+    margin: 0px -15px;
   }
 }
 @media (max-width: 1360px) {
