--- a/src/app/service-page/components/service-page/service-page.component.html
+++ b/src/app/service-page/components/service-page/service-page.component.html
@@ -138,8 +138,8 @@
     <div class="error-message__info-block">
       <div class="error-message__icon"><img src="/assets/images/svg/error-message-icon.svg" alt=""></div>
       <div class="error-message__text">
-        <p class="accent">{{'service-page.description1' | translate}}</p>
-        <p>{{'service-page.description2' | translate}}</p>
+        <p class="accent">{{'service-page.nonAuthorized-title' | translate}}</p>
+        <p>{{'service-page.nonAuthorized-subtitle' | translate}}</p>
       </div>
       <div class="btns-wrapper">
         <div class="btn" [routerLink]="'/auth' | localize">{{'general.authorize' | translate}}</div>
