--- a/src/app/catalog-page/catalog/catalog-pagination/catalog-pagination.component.html
+++ b/src/app/catalog-page/catalog/catalog-pagination/catalog-pagination.component.html
@@ -1,4 +1,4 @@
-<div class="pagination-wrapper" *ngIf='offersList'>
+<div class="pagination-wrapper" *ngIf='offersList' [ngClass]="{noShadow: offersList.last_page <= 2}">
 
   <ul class="pagination" *ngIf='offersList.last_page > 1'>
     <li [ngClass]="{disabled:offersList.current_page === 1}" class="page-item previous-item">
