--- a/src/app/catalog-page/catalog/catalog.component.scss
+++ b/src/app/catalog-page/catalog/catalog.component.scss
@@ -58,6 +58,7 @@
   line-height: 60px;
   color: #323C47;
   text-align: center;
+  margin-bottom: 70px;
 }
 .pagination-wrapper{
   background: #FFFFFF;
