--- a/src/app/user-page/user-page.component.html
+++ b/src/app/user-page/user-page.component.html
@@ -126,7 +126,7 @@
 
                         <div class="education__img-list" *ngIf="education.diploma_files.length; let i = index">
                             <ng-container *ngFor="let img of education.diploma_files; let i = index">
-                                <div class="img-item" (click)="showPopUp(i, thisArr, true)" [ngClass]="{open_popUp: clickedEducationImgs === thisArr && clickedSingleImg === i && openEducationImgs}">
+                                <div class="img-item" (click)="showPopUp(i, thisArr, true)" [ngClass]="{open_popUp: clickedImgsArr === thisArr && clickedImg === i && imgTypeEducation}">
                                     <img src="{{img.link}}" alt="">
                                     <div class="close-popUp"></div>
                                 </div>
@@ -152,8 +152,8 @@
 
                         <div class="education__img-list" *ngIf="education_item.additional_diploma_files.length; let i = index">
                             <ng-container *ngFor="let img of education_item.additional_diploma_files; let i = index">
-                                <div class="img-item" (click)="showPopUp(i, thisAddArr, false)" [ngClass]="{open_popUp: clickedEducationImgs === thisAddArr
-                  && clickedSingleImg === i && !openEducationImgs}">
+                                <div class="img-item" (click)="showPopUp(i, thisAddArr, false)" [ngClass]="{open_popUp: clickedImgsArr === thisAddArr
+                  && clickedImg === i && !imgTypeEducation}">
                                     <img src="{{img.link}}" alt="">
                                     <div class="close-popUp"></div>
                                 </div>
