--- a/src/app/dashboard-page/dashboard-pages/user-settings-dashboard/components/notifications-user-settings/notifications-user-settings.component.scss
+++ b/src/app/dashboard-page/dashboard-pages/user-settings-dashboard/components/notifications-user-settings/notifications-user-settings.component.scss
@@ -98,6 +98,9 @@
 }
 input[type=checkbox].tgl-classic + label{
   background: #fbfcfd;
+  &:before{
+    vertical-align: baseline;
+  }
 }
 .pckg-swap {
   display: flex;
