--- a/src/app/dashboard-page/dashboard-pages/finance-page/components/user-finances/user-finances.component.html
+++ b/src/app/dashboard-page/dashboard-pages/finance-page/components/user-finances/user-finances.component.html
@@ -57,9 +57,9 @@
         <div class="wallet wallet-section-copy laptop">
             <div class="wallet-section ">
                 <div class="title">{{'dashboard.payment-history.input-output' | translate}}</div>
-                <div class="form">
+                <form class="form" #form=ngForm>
                     <div class="operation-type">
-                        <mat-select [(ngModel)]="transactions.transactionType" [(value)]="transactions.transactionType">
+                        <mat-select [(ngModel)]="transactions.transactionType" [(value)]="transactions.transactionType" required>
                             <mat-option [value]="'deffault'" disabled>{{'dashboard.cash-box.choose-operation-type' | translate}}</mat-option>
                             <mat-option [value]="'input'">
                                 {{'dashboard.cash-box.input-money' | translate}}
@@ -73,20 +73,17 @@
                         <div class="count">
                             <p>{{'dashboard.cash-box.wright-summ' | translate}}</p>
                             <div>
-                                <input [(ngModel)]="transactions.amount" id="count" type="text"><label for="count">
+                                <input [(ngModel)]="transactions.amount" id="count" type="text" name="amount" [ngClass]="{'invalid': submited && form.controls.name.invalid }"><label for="count">
                     <span>UAH</span></label>
                             </div>
-
                         </div>
-
-
                         <div class="password">
                             <p>{{'dashboard.cash-box.ur-password' | translate}}</p>
-                            <input type="password" [(ngModel)]="transactions.password">
+                            <input type="password" required [(ngModel)]="transactions.password" name="password" [ngClass]="{'invalid': submited && form.controls.password.invalid }">
                         </div>
-                        <button class="btn" type="submit" (click)="makePayment()">{{'general.success' | translate}}</button>
+                        <button class="btn" type="submit" (click)="makePayment(form)">{{'general.success' | translate}}</button>
                     </div>
-                </div>
+                </form>
 
             </div>
         </div>
@@ -134,4 +131,12 @@
 
         </div>
     </div>
+
+</div>
+<div class="error-wrap" *ngIf="errorMessage">
+    <div class="error">
+        <p>Не верный пароль</p>
+        <button class="submit-popup" (click)="tryPayAgain()">{{'general.back' | translate}}</button>
+    </div>
+
 </div>
