--- a/src/app/dashboard-page/dashboard-pages/my-services-dashboard/components/create-service/second-step-creation/second-step-creation.component.html
+++ b/src/app/dashboard-page/dashboard-pages/my-services-dashboard/components/create-service/second-step-creation/second-step-creation.component.html
@@ -2,12 +2,12 @@
     <form #form="ngForm" (ngSubmit)="nextStep(form)">
         <h3>{{'dashboard.create-service.second-step.title' | translate}}</h3>
 
-        <h5>{{'dashboard.create-service.second-step.subtitle' | translate}}</h5>
-        <div class="form-group" [ngClass]="{'error': (characterLength !== 0 && characterLength <= 100 && characterLength !== null) || characterLength >=500 && submited}">
+        <h5>{{'dashboard.create-service.second-step.subtitle' | translate}}</h5> {{ characterLength }}
+        <div class="form-group" [ngClass]="{'error': ((characterLength !== 0 && characterLength <= 100 && characterLength !== null) || characterLength >500) && submited}">
 
             <quill-editor [modules]="config" [(ngModel)]="userService.description" name="editor" placeholder="" (onContentChanged)="onEditorCreated($event)" ngbPopover="{{'dashboard.create-service.second-step.tool-tip.subtitle' | translate}}" popoverTitle="{{'dashboard.create-service.second-step.tool-tip.title' | translate}}"
-                placement="right" popoverClass="popover" maxlength="500" closeDelay="200"></quill-editor>
-            <span class="notify" *ngIf="submited && characterLength <= 100 || characterLength === null">М{{'dashboard.create-service.second-step.minimal-error' | translate}}</span>
+                placement="right" popoverClass="popover" closeDelay="200"></quill-editor>
+            <span class="notify" *ngIf="submited && characterLength <= 100 || characterLength === null">{{'dashboard.create-service.second-step.minimal-error' | translate}}</span>
             <span class="notify" *ngIf="submited && characterLength > 100 && characterLength !== null">{{this.characterLength}}&nbsp;{{'dashboard.create-service.second-step.max-error' | translate}}</span>
         </div>
 
