--- a/src/app/dashboard-page/dashboard-page.component.scss
+++ b/src/app/dashboard-page/dashboard-page.component.scss
@@ -244,8 +244,8 @@
     margin: 15px auto 8px;
     position: relative;
     width: max-content;
-    left: 50%;
-    transform: translateX(-50%);
+    // left: 50%;
+    // transform: translateX(-50%);
   }
 
   .menu {
@@ -494,13 +494,13 @@
   .side-bar {
     height: 100vh;
     z-index: 0;
+
     .name {
       font-size: 14px;
       line-height: 24px;
     }
-  
     .menu {
-      padding: 35px 25px;  
+      padding: 25px;  
       a {
         width: 48%;
         height: 79px;
@@ -537,6 +537,13 @@
             height: 7px;
           }
         }
+      }
+    }
+    .avatar{
+      min-height: 240px;
+      height: 240px;
+      &:before{
+        height: 325px;
       }
     }
   }
