--- a/src/app/catalog-page/catalog/catalog.component.html
+++ b/src/app/catalog-page/catalog/catalog.component.html
@@ -16,6 +16,6 @@
   <app-catalog-pagination [catalogFilters]="catalogFilters"></app-catalog-pagination>
 </div>
 
-<app-footer></app-footer>
+<app-footer *ngIf="offersList"></app-footer>
 
 
