--- a/src/app/catalog-page/catalog/catalog-items/catalog-items.component.html
+++ b/src/app/catalog-page/catalog/catalog-items/catalog-items.component.html
@@ -10,7 +10,7 @@
       </div>
       <div class="card-description">
 
-        <p class="card-description__about" (click)="openOffer(offer.id)">{{offer.title}}</p>
+        <a class="card-description__about" (click)="openOffer(offer.id)">{{offer.title}}</a>
         <div class="card-description__bottom">
           <div class="star-rating" [ngClass]="{'empty-rating': offer.averageRating.averageMark === 0}">{{offer.averageRating.averageMark}}</div>
           <div class="card-description__comments"><a>({{offer.comments_count}} отзывов)</a></div>
