--- a/src/app/dashboard-page/dashboard-pages/my-services-dashboard/components/create-service/first-step-service-creation/first-step-service-creation.component.scss
+++ b/src/app/dashboard-page/dashboard-pages/my-services-dashboard/components/create-service/first-step-service-creation/first-step-service-creation.component.scss
@@ -366,11 +366,11 @@ form::ng-deep {
     .choose-as-main-photo {
       display: none;
       height: 44px;
-      width: 100%;
+      width: calc(100% - 4px);
       position: absolute;
-      bottom: 0;
+      bottom: 2px;
       left: 50%;
-      transform: translateX(-49%);
+      transform: translateX(-50%);
       font-family: Source Sans Pro, sans-serif;
       font-style: normal;
       font-weight: normal;
@@ -393,7 +393,9 @@ form::ng-deep {
     }
     &:hover {
       .choose-as-main-photo {
-        display: block;
+        display: flex;
+        justify-content: center;
+        align-items: center;
       }
     }
 
@@ -466,8 +468,10 @@ form::ng-deep {
 
 .portfolio {
   img {
-    width: 198px;
-    height: 198px;
+    max-width: 100%;
+    max-height: 100%;
+    object-fit: cover;
+    width: max-content;
   }
 }
 
@@ -544,7 +548,8 @@ form::ng-deep {
   .items {
     justify-content: flex-start;
     .img-item {
-      margin-right: auto;
+      margin-right: 1%;
+      margin-bottom: 1%;
     }
   }
   .form-butons {
