--- a/src/app/shared/modules/footer/footer.component.scss
+++ b/src/app/shared/modules/footer/footer.component.scss
@@ -1,9 +1,10 @@
 .footer{
-    background: linear-gradient(180deg, #F6FAFF 0%, rgba(250, 251, 251, 0.0001) 100%);
+    // background: linear-gradient(180deg, #F6FAFF 0%, rgba(250, 251, 251, 0.0001) 100%);
     width: 100%;
     height: 460px;
     position: relative;
     overflow: hidden;
+    background-color: transparent;
     background-image: url(/assets/images/home-page/footer-bg.svg);
     background-repeat: no-repeat;
     background-position: center top;
