--- a/src/app/user-page/user-page.component.scss
+++ b/src/app/user-page/user-page.component.scss
@@ -5,8 +5,6 @@
   background: #f1f2f4;
   font-family: Source Sans Pro;
   font-weight: normal;
-
-  padding-bottom: 120px;
 }
 .section-title {
   font-weight: 600;
@@ -69,7 +67,7 @@
   max-width: 1045px;
   margin: 0 auto;
   background-color: #fff;
-  padding: 80px 30px 1px;
+  padding: 80px 30px 100px;
 }
 
 .back-to-list {
@@ -576,7 +574,7 @@
 
 :host::ng-deep{
   .footer{
-    background-color: #f1f2f4!important;
+    margin-top: -100px!important;
   }
 }
 
