--- a/src/app/dashboard-page/dashboard-pages/my-services-dashboard/components/create-service/fifth-step-creation/fifth-step-creation.component.html
+++ b/src/app/dashboard-page/dashboard-pages/my-services-dashboard/components/create-service/fifth-step-creation/fifth-step-creation.component.html
@@ -58,7 +58,7 @@
 
                 </button>
                                 <div class="comment">
-                                    <input type="checkbox" [(ngModel)]="userService.offerbrief[i].briefMultiAnswers" class="tgl tgl-classic" name="multi-{{i}}" checkbox="" id="multi-answer">
+                                    <input type="checkbox" [(ngModel)]="userService.offerbrief[i].briefMultianswers" class="tgl tgl-classic" name="multi-{{i}}" checkbox="" id="multi-answer">
                                     <label for="multi-answer"></label>
                                     <p>
                                         {{'dashboard.create-service.fifth-step.succes-many-answer' | translate}}
