--- a/src/app/dashboard-page/dashboard-pages/my-services-dashboard/components/create-service/fourth-step-creation/fourth-step-creation.component.scss
+++ b/src/app/dashboard-page/dashboard-pages/my-services-dashboard/components/create-service/fourth-step-creation/fourth-step-creation.component.scss
@@ -69,7 +69,7 @@ form {
         padding: 0;
         margin: 0;
       }
-      .item-unswer {
+      .item-answer {
         height: 0;
         overflow: hidden;
       }
